# intel-onemkl-prebuild

./: .bumpversion.toml  .dprint.json  .mise.toml  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  test.sh
.github/: FUNDING.yml
.github/workflows/: build.yaml
src/: lib.rs
