[package]
name = "intel-onemkl-prebuild"
version = "0.1.1"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
categories = ["science"]
documentation = "https://docs.rs/intel-onemkl-prebuild"
edition = "2021"
exclude = [".*"]
keywords = ["fft", "blas", "lapack"]
license = "MIT"
links = "mkl"
repository = "https://github.com/jkawamoto/intel-onemkl-prebuild"
description = "Set up Intel oneAPI Math Kernel Library (oneMKL)"

[build-dependencies]
ureq = "3"
intel-mkl-tool = { version = "0.8", optional = true }

[features]
default = ["ilp64", "sequential"]
lp64 = []
ilp64 = []
openmp = []
sequential = []
system = ["dep:intel-mkl-tool"]
